# slot

./: .gitignore  Cargo.toml  Dockerfile.aarch64-unknown-linux-gnu  README.md
.cargo/: config.toml
src/slot_client/: client2.rs  client_impl.rs  lib.rs  protocol.rs  protocol2.rs
src/slot_server/: cli.rs  init.rs  main.rs  module_handler.rs  store.rs  upgrade.rs
