[package]
name = "slot"
version = "0.1.0"
edition = "2021"
authors = [ "Blacepos" ]

[lib]
name = "slot_client"
path = "src/slot_client/lib.rs"

[[bin]]
name = "slot_server"
path = "src/slot_server/main.rs"

[dependencies]
clap = { version = "*", features = ["derive"] }
flexi_logger = "*"
log =  "*"
futures = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["codec"] }
tokio-serde = { version = "*", features = ["messagepack"] }
tokio-rustls = "*"
hyper = { version = "*", features = ["full"] }
hyper-util = "*"
axum = { version = "*", features = ["macros"] }
axum-extra = "*"
tower = "*"
reqwest = { version = "*", features = ["stream", "rustls-tls"] }
